# jim-bob

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .sourcery.yml  Dockerfile  Makefile  Project Goals.md  README.md  example_test_sites.html  example_test_sites.txt  genindex.html  goals.html  index.html  main.py  objects.inv  pyproject.toml  requirements.dev.txt  requirements.txt  search.html  searchindex.js  testing.html  workflow.md  zengenti-ip.html
.devcontainer/: devcontainer.json  post-create.sh
.doctrees/: environment.pickle  example_test_sites.doctree  goals.doctree  index.doctree  testing.doctree  zengenti-ip.doctree
.github/workflows/: build-docker-dev-image.yml  build-docker-image.yml  deploy-docker-image.yml  deploy-github-pages.yml  run-all-tests.yml  test.yml
_sources/: index.md.txt  zengenti-ip.md.txt
app/: __init__.py  routes.py
app/static/: styles.css
app/templates/: index.html
config/: config.py
data/: all_the_data.json  create_db.py  json_files.db
docs/: _config.yml  conf.py  example_test_sites.md  goals.md  project-goals.md  testing.md
docs/css/: custom.css
notebooks/: pap-test.ipynb  search_hostheader.py  search_url.py  tinydb_demo.ipynb
services/: checker.py
src/jim_bob/: config.py  main.py  search_hostheader.py  search_url.py
src/jim_bob/app/: __init__.py  routes.py
src/jim_bob/app/blueprints/: routes.py
src/jim_bob/app/blueprints/home/: routes.py
src/jim_bob/app/models/: block_info.py  block_type.py
src/jim_bob/app/services/: block_checker.py  checker.py  dns_info.py  file_finder_service.py  prometheus_query.py  ssl_details.py
src/jim_bob/app/static/: styles.css
src/jim_bob/app/templates/: index.html
src/jim_bob/blueprints/: home.py
src/jim_bob/config/: config.py
src/jim_bob/models/: block_info.py
src/jim_bob/services/: block_checker.py  checker.py  dns_info.py  prometheus_query.py  site_type.py  ssl_details.py  utils.py
src/jim_bob/static/css/: styles.css
src/jim_bob/templates/: index.html
tests/: file_finder_test.py
tests/services/: checker_test.py  create_db.py  search_hostheader.py  search_url.py
